--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Actualiza el favicon -->
+    <link rel="icon" type="image/png" href="/src/assets/LogoPNG.png" sizes="64x64" />
+    
+    <!-- Ajusta el título -->
+    <title>HandicApp</title>
+
+    <!-- Si cargas fuentes, se agregan aquí -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
   </head>
   <body>
     <div id="root"></div>
